@@ -4,8 +4,8 @@ import android.content.Context;
 import android.graphics.Canvas;
 import android.graphics.Color;
 import android.graphics.Paint;
+import android.support.annotation.NonNull;
 import android.util.AttributeSet;
-import android.util.DisplayMetrics;
 import android.util.TypedValue;
 import android.view.View;
 
@@ -13,41 +13,77 @@ import java.util.ArrayList;
 import java.util.List;
 
 class LineChart extends View {
+    private List<Double> arr;
+    private Integer space;
+    private Integer qtdPerScreen;
     private Double width;
     private Double height;
 
     public LineChart(Context context, AttributeSet attrs) {
         super(context, attrs);
+        arr = values();
+        space = 40;
+        qtdPerScreen = 5;
     }
 
     @Override
     protected void onDraw(Canvas canvas) {
         super.onDraw(canvas);
-        Paint paint = new Paint(Paint.ANTI_ALIAS_FLAG);
-        paint.setColor(Color.BLACK);
-        paint.setStrokeWidth(3);
-        List<Double> arr = new ArrayList<Double>();
-        arr.add(10.0);
-        arr.add(15.0);
-        arr.add(6.0);
-        arr.add(20.0);
-        arr.add(1.0);
-        arr.add(30.0);
-        float i = 0;
-        float next = 0;
-        for (Double point: arr) {
-            float height = this.height.floatValue();
-            float xgoing = bla(point, height, 30);
-            float stopX = TypedValue.applyDimension(TypedValue.COMPLEX_UNIT_DIP, i, this.getResources().getDisplayMetrics());
-            next = TypedValue.applyDimension(TypedValue.COMPLEX_UNIT_DIP, i + 20, this.getResources().getDisplayMetrics());
+        Paint paint = paint();
 
-            canvas.drawLine(next, xgoing, stopX, height, paint);
-            canvas.drawText(point.toString(), next, height, paint);
-            i = i + 20;
+        float max = max(arr);
+        float height = this.height.floatValue();
+        float i = space;
+
+        List<ChartPoint> points = new ArrayList<ChartPoint>();
+        for (Double point: arr) {
+            float xgoing = convertDataToScreenPoint(point, height, max);
+            points.add(new ChartPoint(i, xgoing));
+            i = i + space;
         }
+        ChartPoint last = null;
+        for (ChartPoint point: points) {
+            if(last == null){
+                canvas.drawCircle(0, height, 20, paint);
+                canvas.drawLine(0, height, point.getX(), point.getY(), paint);
+            } else {
+                canvas.drawLine(last.getX(), last.getY(), point.getX(), point.getY(), paint);
+                canvas.drawCircle(last.getX(), last.getY(), 20, paint);
+            }
+            last = point;
+        }
+        canvas.drawCircle(last.getX(), last.getY(), 20, paint);
     }
 
-    private float bla(Double point, float height, float maxValue) {
+    private float max(List<Double> arr) {
+        float max = 0;
+        for( Double value : arr){
+            if(max < value.floatValue()){
+                max = value.floatValue();
+            }
+        }
+        return max;
+    }
+
+    @NonNull
+    private Paint paint() {
+        Paint paint = new Paint(Paint.ANTI_ALIAS_FLAG);
+        paint.setColor(Color.BLACK);
+        paint.setStrokeWidth(5);
+        return paint;
+    }
+
+    @NonNull
+    private List<Double> values() {
+        List<Double> arr = new ArrayList<Double>(100);
+        for(int i = 0; i < 100; i++){
+            double size = Math.random() * 10;
+            arr.add(size);
+        }
+        return arr;
+    }
+
+    private float convertDataToScreenPoint(Double point, float height, float maxValue) {
         float less = TypedValue.applyDimension(TypedValue.COMPLEX_UNIT_DIP, point.floatValue(), this.getResources().getDisplayMetrics());
         maxValue = TypedValue.applyDimension(TypedValue.COMPLEX_UNIT_DIP, maxValue, this.getResources().getDisplayMetrics());
         return height - (height * less / maxValue);
@@ -56,8 +92,10 @@ class LineChart extends View {
     @Override
     protected void onMeasure(int widthMeasureSpec, int heightMeasureSpec) {
         super.onMeasure(widthMeasureSpec, heightMeasureSpec);
-        width = Integer.valueOf(MeasureSpec.getSize(widthMeasureSpec)).doubleValue();
+        space = (this.getRootView().getWidth() / qtdPerScreen);
+        width = new Double(arr.size() * space + ( space * 4));
         height = Integer.valueOf(MeasureSpec.getSize(heightMeasureSpec)).doubleValue();
+        this.setMeasuredDimension(width.intValue(), height.intValue());
     }
 }
 
